Swapped out .formatted for String.format for Java 11